force-app/main/default/objects/Quality_Indicator_Settings__mdt/Quality_Indicator_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Quality Indicator Settings</label>
    <pluralLabel>Quality Indicator Settings</pluralLabel>
</CustomObject>