force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/File_Staging_Failed_Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>File_Staging_Failed_Days_Ago__c</fullName>
    <description>File Staging record will be considered failed if Status = &quot;Ready to Publish&quot; and Created Date is more than X days ago where X is the value of this field</description>
    <inlineHelpText>File Staging record will be considered failed if Status = &quot;Ready to Publish&quot; and Created Date is more than X days ago where X is the value of this field</inlineHelpText>
    <label>File Staging Failed Days Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>