force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Five_Domains_RP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Five_Domains_RP_End_Date__c</fullName>
    <description>Quality Indicator Summary records with a reporting period end date less or equal to this value will have only 5 domains.</description>
    <inlineHelpText>Quality Indicator Summary records with a reporting period end date less or equal to this value will have only 5 domains.</inlineHelpText>
    <label>Five Domains RP End Date</label>
    <type>Date</type>
</CustomField>