force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Integer_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integer_Error_Message__c</fullName>
    <description>Error message displayed when number is &lt; lower limit and &gt; upper limit</description>
    <label>Integer Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>