force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Integer_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Integer_Upper_Limit__c</fullName>
    <label>Integer Upper Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>