force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Batch job will delete records older than a certain number of days. This field is used to configure the number of days. As of April 6th, 2023, the default date is set to 365.</description>
    <label>QI Versioning Deletion Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>