force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/QI_Limited_Steppers__c.field-meta.xml
<CustomField>
    <fullName>QI_Limited_Steppers__c</fullName>
    <label>QI Limited Steppers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>