force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/R4_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>R4_Go_Live_Date__c</fullName>
    <label>R4 Go Live Date</label>
    <type>Date</type>
</CustomField>