force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Text_Character_Limit__c.field-meta.xml
<CustomField>
    <fullName>Text_Character_Limit__c</fullName>
    <label>Text Character Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>