force-app/main/default/objects/Quality_Indicator_Settings__mdt/fields/Text_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Text_Error_Message__c</fullName>
    <description>Error message to be displayed when max Character Length is &gt; Max Character Limit</description>
    <label>Text Error Message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>